# ns3-marl-uav

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  __init__.py  pyproject.toml
doc/: Makefile  doxygen.conf  groups.h
doc/source/: conf.py  defiance-application-helper.rst  defiance-application.rst  defiance-communication-helper.rst  defiance-design.rst  defiance-helper.rst  defiance-references.rst  defiance-user-channel-interface.rst  defiance-user-container.rst  defiance-user-overview.rst  defiance-user.rst  defiance.rst  index.rst
doc/static/: doxygen-awesome.css
examples/: CMakeLists.txt
examples/addition-example/: README.md  addition-agent-app.cc  addition-agent-app.h  agent.py  no-op-action-app.cc  no-op-action-app.h  node-id-reward-app.cc  node-id-reward-app.h  plot_training_curves.py  random-observation-app.cc  random-observation-app.h  simulation.cc  train.sh
examples/agent-agent-communication/: agent-agent-communication.cc  observation-sharing.cc
examples/ai-demo/: apb.cc
experiments/: analysis.ipynb  runTest0.py  runTest2.py  runTest3_1.py  runTest3_2.py  runTest4_1.py  runTest4_2.py
helper/: communication-helper.cc  communication-helper.h  defiance-helper.h  device-manager.cc  device-manager.h  rl-application-helper.cc  rl-application-helper.h  topology-creator.cc  topology-creator.h
model/: action-application.cc  action-application.h  agent-application.cc  agent-application.h  aggregated-info.cc  aggregated-info.h  base-environment.cc  base-environment.h  base-test.cc  base-test.h  channel-interface.cc  channel-interface.h  data-collector-application.cc  data-collector-application.h  environment-creator.cc  environment-creator.h  history-container.cc  history-container.h  observation-application.cc  observation-application.h  pendulum-cart.cc  pendulum-cart.h  reward-application.cc  reward-application.h  rl-application-container.cc  rl-application-container.h  rl-application.cc  rl-application.h  simple-channel-interface.cc  simple-channel-interface.h  socket-channel-interface.cc  socket-channel-interface.h  static-environment.cc  static-environment.h  sumo-environment.cc  sumo-environment.h  uav-env-creator.cc  uav-env-creator.h  uav-node.cc  uav-node.h
templates/: action-application-template.cc  agent-application-template.cc  observation-application-template.cc  reward-application-template.cc
test/: action-application-test.cc  agent-application-test.cc  communication-test.cc  data-collector-application-test.cc  examples-to-run.py  history-container-test.cc  marl-interface-test.cc  observation-application-test.cc  rl-application-test.cc  run-python-tests.sh  simple-channel-interface-test.cc  socket-channel-interface-test.cc  test_marl_interface.py
utils/: __init__.py  find_location.py  scenario_helper.py  visualize.py
(+80 files in other folders)
